[lworld] C2 compilation fails with "Error mixing types: byte and inlinetype[1]:{byte}"

XMLWordPrintable

      After merging in jdk-17+13, runtime/valhalla/inlinetypes/InlineTypeDensity.java with Xcomp crashes...

      Error mixing types: byte and inlinetype[1]:{byte}

      # To suppress the following error report, specify this argument
      # after -XX: or in .hotspotrc: SuppressErrorAt=/type.cpp:1266
      #
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (/oracle/valhalla/open/src/hotspot/share/opto/type.cpp:1266), pid=726473, tid=726481
      # Error: ShouldNotReachHere()
      #

      Current CompileTask:
      C2: 29815 5253 b 4 java.lang.Object::toString (56 bytes)

      Stack: [0x00007fa3f0bfc000,0x00007fa3f0cfd000], sp=0x00007fa3f0cf8120, free space=1008k
      Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0x194fd19] Type::typerr(Type const*) const+0x79
      V [libjvm.so+0x1950f88] TypeInt::xmeet(Type const*) const+0xa8
      V [libjvm.so+0x1957cb3] Type::meet_helper(Type const*, bool) const+0x73
      V [libjvm.so+0x195935c] TypeAry::xmeet(Type const*) const+0xec
      V [libjvm.so+0x1957cb3] Type::meet_helper(Type const*, bool) const+0x73
      V [libjvm.so+0x1960e78] TypeAryPtr::xmeet_helper(Type const*) const+0x2f8
      V [libjvm.so+0x1948b86] TypePtr::xmeet(Type const*) const+0x16
      V [libjvm.so+0x1957cb3] Type::meet_helper(Type const*, bool) const+0x73
      V [libjvm.so+0x8a650c] ConstraintCastNode::dominating_cast(PhaseGVN*, PhaseTransform*) const+0x21c
      V [libjvm.so+0x8a6efe] CheckCastPPNode::Identity(PhaseGVN*)+0x10e
      V [libjvm.so+0x167b922] PhaseIterGVN::transform_old(Node*)+0x4c2
      V [libjvm.so+0x1673b8e] PhaseIterGVN::optimize()+0x7e
      V [libjvm.so+0xa4c1f6] Compile::Optimize()+0x216
      V [libjvm.so+0xa4f523] Compile::Compile(ciEnv*, ciMethod*, int, bool, bool, bool, bool, DirectiveSet*)+0x1a53
      V [libjvm.so+0x863da8] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x1f8
      V [libjvm.so+0xa5f421] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xf21
      V [libjvm.so+0xa600c8] CompileBroker::compiler_thread_loop()+0x5a8
      V [libjvm.so+0x1922d91] JavaThread::thread_main_inner()+0x271
      V [libjvm.so+0x192b050] Thread::call_run()+0x100
      V [libjvm.so+0x15eca26] thread_native_entry(Thread*)+0x116

            Assignee:
            Tobias Hartmann
            Reporter:
            David Simms
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: