8263440: [lworld] C2 compilation fails with "Error mixing types: byte and inlinetype[1]:{byte}"